--- a/lesson_6/style.css
+++ b/lesson_6/style.css
@@ -5,7 +5,118 @@
 }
 
 .the-most-main-container {
-  /* width: 1440px; */
+  width: 1440px;
   margin: 0 auto;
   /* height: 400vh; */
+  display: flex;
+}
+
+.aside__container {
+  background-color: white;
+}
+
+.bankdash__container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  padding-top: 40px;
+  margin-bottom: 60px;
+}
+
+.bankdash-logo__title {
+  color: rgb(52, 60, 106);
+  font-family: "Montserrat";
+  font-size: 25px;
+  font-weight: 900;
+  line-height: 32px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-decoration: none;
+}
+
+.bankdash__list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.bankdash__item {
+  display: flex;
+  gap: 30px;
+}
+
+.bankdash__link {
+  color: rgb(177, 177, 177);
+  font-family: "Inter";
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 22px;
+  letter-spacing: 0%;
+  text-align: left;
+  text-decoration: none;
+}
+
+.bankdash__link:hover {
+  color: rgb(24, 20, 243);
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+/* end of aside  */
+
+/* start of header */
+
+.main__container {
+  width: 1440px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 25px;
+}
+
+.header__title {
+  color: rgb(52, 60, 106);
+  font-family: "Inter";
+  font-size: 28px;
+  font-weight: 600;
+  line-height: 34px;
+  letter-spacing: 0%;
+  text-align: left;
+  padding-left: 60px;
+}
+
+.header__panel-user {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.header__form {
+  position: relative;
+}
+
+.header__input {
+  color: rgb(139, 163, 203);
+  font-family: Inter;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0%;
+  text-align: center;
+  padding: 16px 40px 16px 60px;
+  border-radius: 40px;
+  background: rgb(245, 247, 250);
+  border: none;
+}
+
+.header__search-icon {
+  position: absolute;
+  left: 40px;
+  top: 50%;
+  transform: translateY(-50%);
 }
