--- a/lesson_13-adaptive/style.css
+++ b/lesson_13-adaptive/style.css
@@ -84,12 +84,81 @@
 }
 
 @media (max-width: 1440px) {
+  .main {
+    width: 100%;
+  }
+
   .cta-banner {
-    max-width: 100%;
+    max-width: 1700px;
     border-radius: 100px;
     background: rgb(249, 184, 0);
     display: flex;
-    padding: 150px 150px 150px 180px;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-between;
+    padding: 90px 120px 80px 120px;
     gap: 120px;
+  }
+
+  .cta__img {
+    flex: 1;
+  }
+
+  .cta-content {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+  }
+
+  .cta__title {
+    color: rgb(38, 38, 38);
+    font-family: "Segoe UI";
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 48px;
+    text-align: left;
+    margin-bottom: 20px;
+  }
+
+  .cta__subtitle {
+    color: rgb(38, 38, 38);
+    font-family: "Segoe UI";
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 34px;
+    letter-spacing: 0%;
+    text-align: left;
+    text-decoration-line: underline;
+    margin-bottom: 12px;
+  }
+
+  .cta__description {
+    color: rgb(38, 38, 38);
+    font-family: "Segoe UI";
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 2%;
+    text-align: left;
+    margin-bottom: 30px;
+  }
+
+  .cta__btn {
+    color: rgb(255, 255, 255);
+    font-family: "Segoe UI";
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 32px;
+    text-align: left;
+    width: fit-content;
+
+    padding: 16px 40px;
+    border-radius: 38.15px;
+    border: none;
+    background: rgb(38, 38, 38);
+
+    display: flex;
+    align-items: center;
+    gap: 50px;
   }
 }
