--- a/lesson_13-adaptive/style.css
+++ b/lesson_13-adaptive/style.css
@@ -91,7 +91,7 @@ body {
 /* end of cta-banner */
 
 .testemonials {
-  max-width: 100%;
+  width: 100%;
   border-radius: 50px;
   background: rgb(255, 255, 255);
 
@@ -121,7 +121,6 @@ body {
   font-weight: 700;
   line-height: 40px;
   text-align: center;
-  width: 280px;
   margin-bottom: 20px;
 }
 
@@ -133,7 +132,6 @@ body {
   line-height: 21px;
   text-align: center;
   margin-bottom: 20px;
-  width: 280px;
 }
 
 .testemonials__name {
@@ -156,11 +154,11 @@ body {
 /* end of testemonials */
 
 .benefits {
-  max-width: 100%;
+  width: 100%;
   border-radius: 50px;
   background: rgb(255, 255, 255);
 
-  padding: 40px;
+  padding: 20px;
   margin: 0 auto;
   margin-left: 10px;
   margin-right: 10px;
@@ -175,8 +173,8 @@ body {
 }
 
 .benefits-content {
-  /* display: flex;
-  flex-direction: column; */
+  display: flex;
+  flex-direction: column;
 }
 
 .benefits__title {
@@ -186,7 +184,7 @@ body {
   font-weight: 700;
   line-height: 48px;
   margin-bottom: 30px;
-  text-align: ;
+  text-align: center;
 }
 
 .benefit-list {
@@ -194,6 +192,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   text-wrap: nowrap;
+  margin-bottom: 30px;
 }
 
 .benefits__item {
@@ -223,10 +222,12 @@ body {
   font-size: 24px;
   font-weight: 700;
   line-height: 32px;
-  letter-spacing: 0%;
   text-align: left;
-
-  padding: 16px 60px 16px 40px;
+  display: flex;
+  align-items: center;
+  gap: 75px;
+  text-wrap: nowrap;
+  padding: 16px 38px;
   border-radius: 46px;
   background: rgb(38, 38, 38);
 }
@@ -371,5 +372,40 @@ body {
     justify-content: left;
     align-items: center;
     gap: 40px;
+  }
+
+  /* end of testemonials */
+
+  .benefits {
+    margin: 0 auto;
+    margin-bottom: 150px;
+    width: 1700px;
+    border-radius: 100px;
+    background: rgb(255, 255, 255);
+
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    padding: 100px 120px 100px 145px;
+    gap: 120px;
+  }
+
+  .benefits__img {
+    width: 714px;
+  }
+
+  .benefit-list {
+    justify-content: start;
+  }
+
+  .benefits-content {
+    display: block;
+  }
+
+  .benefits__btn {
+    background: rgb(249, 184, 0);
+    border: none;
+    color: black;
+    padding: 22px 50px;
   }
 }
